--- a/docs/ai/ПРОЕКТ_ОБЪЯСНЕНИЕ.md
+++ b/docs/ai/ПРОЕКТ_ОБЪЯСНЕНИЕ.md
@@ -1,6 +1,6 @@
 # 📖 Что это за проект и как с ним работать
 
-## 🎯 Что это такое?
+## 🎯 Что это такое
 
 **Collabverse** — это платформа для управления проектами с функциями:
 - CRM для проектов и задач
@@ -12,7 +12,7 @@
 
 Это **монорепозиторий** (один репозиторий с несколькими приложениями):
 
-```
+```text
 collabstep-new-3/
 ├── apps/
 │   ├── web/          ← Frontend (Next.js приложение)
@@ -26,16 +26,19 @@ collabstep-new-3/
 ## 🛠️ Технологии
 
 ### Frontend
+
 - **Next.js 14** — React фреймворк (основное приложение)
 - **TypeScript** — типизация
 - **Tailwind CSS** — стили
 - **Zustand** — управление состоянием
 
 ### Backend
+
 - **Next.js API Routes** — API endpoints (`apps/web/app/api/`)
 - **TypeScript** — типизация
 
 ### Инструменты
+
 - **pnpm** — менеджер пакетов (быстрее npm)
 - **Jest** — unit тесты
 - **Playwright** — E2E тесты
@@ -48,18 +51,21 @@ collabstep-new-3/
 ## 🚀 Как запустить проект
 
 ### Шаг 1: Установить зависимости
+
 ```bash
 pnpm install
-```
+```text
 (Вы уже это сделали ✅)
 
 ### Шаг 2: Настроить переменные окружения
+
 ```bash
 pnpm ensure-env
-```
+```text
 (Скрипт создаст файл `.env` с нужными настройками ✅)
 
 ### Шаг 3: Запустить проект
+
 ```bash
 pnpm dev
 ```
@@ -93,18 +99,21 @@ pnpm dev
 ## 📂 Где что находится
 
 ### Frontend страницы
+
 - `apps/web/app/` — страницы Next.js
   - `(marketing)/` — маркетинговые страницы (главная, логин, регистрация)
   - `(app)/` — основное приложение (дашборд, проекты, задачи)
   - `api/` — API endpoints
 
 ### Компоненты
+
 - `apps/web/components/` — React компоненты
   - `ui/` — базовые UI компоненты
   - `pm/` — компоненты для управления проектами
   - `finance/` — финансовые компоненты
 
 ### Backend логика
+
 - `apps/web/app/api/` — API endpoints
 - `apps/web/lib/` — библиотеки и утилиты
 
@@ -121,17 +130,20 @@ pnpm dev
 ## 🐛 Если что-то не работает
 
 ### Порт занят
+
 ```bash
 pnpm kill:ports  # Остановить процессы на портах 3000, 3001, 3002, 8080
 ```
 
 ### Очистить кэш
+
 ```bash
 rm -rf apps/web/.next node_modules
 pnpm install
 ```
 
 ### Проверить версии
+
 ```bash
 node --version  # Должно быть 20+
 pnpm --version  # Должно быть 9+
@@ -144,7 +156,7 @@ pnpm --version  # Должно быть 9+
 - **[Архитектура](docs/architecture/system-analysis.md)** — как устроен проект
 - **[Дорожная карта](docs/development/PLAN.md)** — что планируется сделать
 
-## 🎯 Что дальше?
+## 🎯 Что дальше
 
 1. **Запустите проект:** `pnpm dev`
 2. **Откройте браузер:** http://localhost:3000
