--- a/docs/ai/ПРОЕКТ_ОБЪЯСНЕНИЕ.md
+++ b/docs/ai/ПРОЕКТ_ОБЪЯСНЕНИЕ.md
@@ -151,10 +151,9 @@ pnpm --version  # Должно быть 9+
 
 ## 📚 Документация
 
-- **[Быстрый старт](docs/getting-started/quick-start.md)** — детальная инструкция
-- **[Настройка](docs/getting-started/setup.md)** — подробная настройка
-- **[Архитектура](docs/architecture/system-analysis.md)** — как устроен проект
-- **[Дорожная карта](docs/development/PLAN.md)** — что планируется сделать
+- **[Быстрый старт](../getting-started/quick-start.md)** — детальная инструкция
+- **[Настройка](../getting-started/setup.md)** — подробная настройка
+- **[Архитектура](../architecture/system-analysis.md)** — как устроен проект
 
 ## 🎯 Что дальше
 
